fixed app overflow behavior

--- a/src/components/DocumentContainer/DocumentContainer.css
+++ b/src/components/DocumentContainer/DocumentContainer.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  height: 100vh;
+  height: 95vh;
   overflow-y: scroll;
   max-width: 100%;
   margin: 0;
