--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,4 +3,5 @@
   margin: 0;
   color: #fff;
   padding: 0.5rem;
+  height: 5vh;
 }
